@@ -40,6 +40,9 @@ gchar *s = N_("Run the calculator at its default speed (default) or at the maxim
 gchar *s = N_("Restrict to actual speed");
 gchar *s = N_("Enable/disable hardware protection. Please note you will have to restart the emulator or select an image for changes to take effect.");
 gchar *s = N_("HW protection");
+gchar *s = N_("High LCD update");
+gchar *s = N_("Med LCD update");
+gchar *s = N_("Low LCD update");
 gchar *s = N_("_Normal view (x1)");
 gchar *s = N_("_Large view (x2)");
 gchar *s = N_("_Full screen");
